[gd_scene load_steps=17 format=3 uid="uid://bbs5ubc5cxla1"]

[ext_resource type="Script" path="res://scripts/inicio.gd" id="1_8nkfe"]
[ext_resource type="Theme" uid="uid://df3h0hid3ni41" path="res://materiales/Botones.tres" id="1_nw5r3"]
[ext_resource type="PackedScene" uid="uid://4aaf25exft6f" path="res://Models/dae/tileLarge_forest.dae" id="2_a6gqj"]
[ext_resource type="PackedScene" uid="uid://dpfcmknnwbaea" path="res://Models/dae/tileMedium_forest.dae" id="3_73hxi"]
[ext_resource type="PackedScene" uid="uid://cox4txcvnqx53" path="res://Models/dae/tileSmall_forest.dae" id="4_6626p"]
[ext_resource type="PackedScene" uid="uid://dvikxrdxa2cxp" path="res://Models/dae/tree_forest.dae" id="5_q30lf"]
[ext_resource type="PackedScene" uid="uid://epf1j00x54eh" path="res://Models/dae/rocksA_forest.dae" id="6_srqht"]
[ext_resource type="PackedScene" uid="uid://0b1f74yixhu3" path="res://Models/dae/plantA_forest.dae" id="7_2xxpp"]
[ext_resource type="PackedScene" uid="uid://c4hugwam1thn4" path="res://Models/dae/plantB_forest.dae" id="8_0roc4"]
[ext_resource type="PackedScene" uid="uid://cdoyu3b4wtbyq" path="res://Models/dae/rocksB_forest.dae" id="9_jcthp"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_qs7ea"]
sky_top_color = Color(0.411666, 0.761824, 0.983959, 1)
sky_horizon_color = Color(0.306502, 0.650416, 0.678812, 1)
sky_cover_modulate = Color(0.962219, 0.87596, 0.836515, 1)
ground_bottom_color = Color(0.260707, 0.575134, 0.722102, 1)
ground_horizon_color = Color(0.305882, 0.65098, 0.678431, 1)

[sub_resource type="Sky" id="Sky_ilcl3"]
sky_material = SubResource("ProceduralSkyMaterial_qs7ea")

[sub_resource type="Environment" id="Environment_31cgx"]
background_mode = 2
sky = SubResource("Sky_ilcl3")
ambient_light_source = 3
ambient_light_color = Color(0.994689, 0.901946, 0.430528, 1)
ambient_light_energy = 7.23

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l8s5k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sfytk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4dr37"]

[node name="Inicio" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 0, 0)
light_color = Color(0.561685, 0.465477, 0.321959, 1)
light_energy = 3.225
shadow_enabled = true
sky_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_31cgx")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.170994, -0.029446, 0.984832, 0.0281078, 0.999292, 0.0249981, -0.984871, 0.0234069, 0.171701, 7.82776, 2.52108, 1.80092)
keep_aspect = 0
fov = 31.2288

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
texture_filter = 2
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -94.0
offset_right = -132.0
offset_bottom = -94.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.719, 0.8)
size_flags_horizontal = 4
theme = ExtResource("1_nw5r3")
script = ExtResource("1_8nkfe")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.724138
anchor_top = -0.348315
anchor_right = 1.0
anchor_bottom = 1.33708
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="BotonJugar" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_l8s5k")
text = " Jugar"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="BotonOpciones" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_sfytk")
text = "Ajustes"

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="BotonSalir" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_4dr37")
text = "Salir"

[node name="tree_forest_gltf2" parent="." instance=ExtResource("5_q30lf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.64466, 0.964634, 2.64876)

[node name="tileMedium_forest_gltf2" parent="." instance=ExtResource("3_73hxi")]
transform = Transform3D(0.0760404, 0, -0.997105, 0, 1, 0, 0.997105, 0, 0.0760404, -5.4109, -0.28984, -1.76924)

[node name="tileLarge_forest_gltf" parent="." instance=ExtResource("2_a6gqj")]
transform = Transform3D(5.31929, 0, 0, 0, 1.63214, 0, 0, 0, 3.83894, -12.9303, -0.527367, -3.27542)

[node name="tileMedium_forest_gltf" parent="." instance=ExtResource("3_73hxi")]
transform = Transform3D(0.952001, 0, -0.306094, 0, 1, 0, 0.306094, 0, 0.952001, 1.26426, -0.126686, 2.09291)

[node name="tileSmall_forest_gltf" parent="." instance=ExtResource("4_6626p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.29323, 0.412274, -0.452711)

[node name="plantA_forest_gltf4" parent="." instance=ExtResource("7_2xxpp")]
transform = Transform3D(0.743997, 0, 0.668183, 0, 1, 0, -0.668183, 0, 0.743997, -10.2467, 1.08778, 1.11932)

[node name="plantA_forest_gltf3" parent="." instance=ExtResource("7_2xxpp")]
transform = Transform3D(-0.800355, 0, -0.599527, 0, 1, 0, 0.599527, 0, -0.800355, -8.54217, 1.09728, 3.47383)

[node name="plantA_forest_gltf2" parent="." instance=ExtResource("7_2xxpp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.27109, 1.00716, 1.73692)

[node name="plantA_forest_gltf5" parent="." instance=ExtResource("7_2xxpp")]
transform = Transform3D(0.151261, 0, 0.988494, 0, 1, 0, -0.988494, 0, 0.151261, -5.12601, 1.07139, -1.29033)

[node name="plantA_forest_gltf" parent="." instance=ExtResource("7_2xxpp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.58078, 1.33402, 1.64268)

[node name="rocksA_forest_gltf" parent="." instance=ExtResource("6_srqht")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.75379, 1.1071, 0.979726)

[node name="rocksA_forest_gltf3" parent="." instance=ExtResource("6_srqht")]
transform = Transform3D(-0.684598, 0, -0.728921, 0, 1, 0, 0.728921, 0, -0.684598, -13.8199, 1.11638, 2.03038)

[node name="rocksA_forest_gltf2" parent="." instance=ExtResource("6_srqht")]
transform = Transform3D(-0.397116, 0, 0.917769, 0, 1, 0, -0.917769, 0, -0.397116, -0.0298562, 1.16218, -1.87378)

[node name="tree_forest_gltf5" parent="." instance=ExtResource("5_q30lf")]
transform = Transform3D(-0.127151, 0, -0.991883, 0, 1, 0, 0.991883, 0, -0.127151, -19.6372, 1.11346, -1.29924)

[node name="tree_forest_gltf4" parent="." instance=ExtResource("5_q30lf")]
transform = Transform3D(0.609038, 0, -0.793141, 0, 1, 0, 0.793141, 0, 0.609038, -15.2948, 0.642218, 0.842439)

[node name="tree_forest_gltf3" parent="." instance=ExtResource("5_q30lf")]
transform = Transform3D(0.609038, 0, -0.793141, 0, 1, 0, 0.793141, 0, 0.609038, -9.11993, 0.717422, -0.971108)

[node name="tree_forest_gltf" parent="." instance=ExtResource("5_q30lf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.32233, 0.971565, -3.3533)

[node name="plantB_forest_gltf4" parent="." instance=ExtResource("8_0roc4")]
transform = Transform3D(0.743997, 0, -0.668183, 0, 1, 0, 0.668183, 0, 0.743997, -8.2261, 1.03305, -0.436932)

[node name="plantB_forest_gltf2" parent="." instance=ExtResource("8_0roc4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.11305, 1.00876, -0.218466)

[node name="plantB_forest_gltf" parent="." instance=ExtResource("8_0roc4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.37733, 1.33336, -0.109233)

[node name="rocksB_forest_gltf" parent="." instance=ExtResource("9_jcthp")]
transform = Transform3D(0.914783, 0, -0.403944, 0, 1, 0, 0.403944, 0, 0.914783, -5.70165, 1.20944, -1.76592)

[node name="plantB_forest_gltf3" parent="." instance=ExtResource("8_0roc4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.7357, 1.10962, -0.218466)

[node name="rocksA_forest_gltf6" parent="." instance=ExtResource("6_srqht")]
transform = Transform3D(0.982619, 0, 0.185633, 0, 1, 0, -0.185633, 0, 0.982619, -15.727, 1.12127, -2.94694)

[node name="rocksA_forest_gltf4" parent="." instance=ExtResource("6_srqht")]
transform = Transform3D(0.841614, 0, 0.540079, 0, 1, 0, -0.540079, 0, 0.841614, -15.6195, 1.1071, -6.84206)

[node name="tree_forest_gltf6" parent="." instance=ExtResource("5_q30lf")]
transform = Transform3D(1.00332, 0, 0, 0, 1.34687, 0, 0, 0, 1.23742, -18.7997, 0.934408, -4.56525)

[node name="plantB_forest_gltf5" parent="." instance=ExtResource("8_0roc4")]
transform = Transform3D(0.999999, 0.0015708, 0, -0.0015708, 0.999999, 0, 0, 0, 1, -13.9486, 1.06788, -4.86)

[node name="plantB_forest_gltf5" parent="plantB_forest_gltf5" instance=ExtResource("8_0roc4")]
transform = Transform3D(0.909519, 0, -0.415662, 0, 1, 0, 0.415662, 0, 0.909519, -4.16541, -0.0713453, 0.214812)

[node name="rocksA_forest_gltf5" parent="." instance=ExtResource("6_srqht")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.35643, 1.1071, -4.72012)

[node name="plantA_forest_gltf6" parent="." instance=ExtResource("7_2xxpp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0663, 1.0426, -4.67737)
